--- a/components/Login.css
+++ b/components/Login.css
@@ -251,4 +251,20 @@
     border-color: #0070f3; /* Azul de enfoque */
     background-color: #fff;
   }
+  .div-wrapper input[type="password"] {
+    width: 195%;
+    padding: 12px 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+    font-family: inherit;
+    color: #333;
+    background-color: #f9f9f9;
+    outline: none;
+    transition: border 0.3s ease;
+  }
   
+  .div-wrapper input[type="password"]:focus {
+    border-color: #0070f3; /* Azul de enfoque */
+    background-color: #fff;
+  }
