--- a/components/registro.css
+++ b/components/registro.css
@@ -27,9 +27,10 @@
     padding: 20px;
   }
   
-  h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
+  .registro {
+    font-size: 35px;
+    margin-bottom: 10px;
+    padding-left: 35;
   }
   
   .form-group {
@@ -44,7 +45,7 @@
   }
   
   .form-group input {
-    width: 140%;
+    width: 130%;
     padding: 10px;
     font-size: 1rem;
     border: 1px solid #ccc;
@@ -52,7 +53,7 @@
   }
   
   .form-group button {
-    width: 100%;
+    width: 130%;
     padding: 10px;
     background-color: #00adb5;
     color: white;
@@ -61,6 +62,7 @@
     border-radius: 4px;
     cursor: pointer;
   }
+  
   
   .form-group button:hover {
     background-color: #00adb5;
